--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 ./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_800.jpg 800w,
 ./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1200.jpg 1200w,
 ./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg 1920w"
-              src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg" alt="">
+              src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg" alt=""
+              loading="lazy">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
@@ -83,7 +84,8 @@
 ./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_800.jpg 800w,
 ./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1200.jpg 1200w,
 ./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1920.jpg 1920w"
-              src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1920.jpg" alt="">
+              src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash_qpgdea_c_scale,w_1920.jpg" alt=""
+              loading="lazy">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
@@ -107,7 +109,8 @@
 ./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_800.jpg 800w,
 ./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1200.jpg 1200w,
 ./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1920.jpg 1920w"
-              src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1920.jpg" alt="">
+              src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_o9seh6_c_scale,w_1920.jpg" alt=""
+              loading="lazy">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
@@ -132,7 +135,7 @@
 ./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_1200.jpg 1200w,
 ./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_1920.jpg 1920w"
               src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_y7wgvs_c_scale,w_1920.jpg"
-              alt="">
+              alt="" loading="lazy">
           </figure>
           <div class="card-content">
             <div class="card-content__text">
