new animation loader

--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
     </nav>
   </footer>
 
+  <div class="loader">
+    <div class="loader__content">
+      <span>
+        <i class="icon-ustencils"></i>
+      </span>
+    </div>
+  </div>
+
 </body>
 
 </html>
