add menu options fadeIn transition + delays

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -42,10 +42,10 @@
 
     <section class="restaurant-section">
       <form>
-        <fieldset>
+        <fieldset class="fade-in">
           <legend>Entrées</legend>
 
-          <label class="menu-option" for="entree-1">
+          <label class="menu-option fade-in delay-100" for="entree-1">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Fricassée d'escargots</h3>
               <p class="menu-option__subtitle">au piment d'Espelette</p>
@@ -62,7 +62,7 @@
             </div>
           </label>
 
-          <label class="menu-option" for="entree-2">
+          <label class="menu-option fade-in delay-200" for="entree-2">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Foie gras de canard mi-cuit</h3>
               <p class="menu-option__subtitle">et ses copeaux de truffe noire</p>
@@ -79,7 +79,7 @@
             </div>
           </label>
 
-          <label class="menu-option" for="entree-3">
+          <label class="menu-option fade-in delay-300" for="entree-3">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Œuf au plat</h3>
               <p class="menu-option__subtitle">assaisonné à la truffe sur lit de caviar</p>
@@ -96,9 +96,9 @@
             </div>
           </label>
         </fieldset>
-        <fieldset>
+        <fieldset class="fade-in delay-400">
           <legend>Plats</legend>
-          <label class="menu-option" for="plat-1">
+          <label class="menu-option fade-in delay-500" for="plat-1">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Filet de bœuf aux herbes</h3>
               <p class="menu-option__subtitle">accompagné de sa ribambelle de légumes</p>
@@ -114,7 +114,7 @@
               <i class="icon-check" aria-hidden="true"></i>
             </div>
           </label>
-          <label class="menu-option" for="plat-2">
+          <label class="menu-option fade-in delay-600" for="plat-2">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Parmentier de queue de bœuf</h3>
               <p class="menu-option__subtitle">à la truffe noire sur sa purée de panais</p>
@@ -130,7 +130,7 @@
               <i class="icon-check"></i>
             </div>
           </label>
-          <label class="menu-option" for="plat-3">
+          <label class="menu-option fade-in delay-700" for="plat-3">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Filet de turbot</h3>
               <p class="menu-option__subtitle">au agrumes</p>
@@ -147,9 +147,9 @@
             </div>
           </label>
         </fieldset>
-        <fieldset>
+        <fieldset class="fade-in delay-800">
           <legend>Desserts</legend>
-          <label class="menu-option" for="dessert-1">
+          <label class="menu-option fade-in delay-900" for="dessert-1">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Paris-Brest</h3>
               <p class="menu-option__subtitle">revisité</p>
@@ -165,7 +165,7 @@
               <i class="icon-check" aria-hidden="true"></i>
             </div>
           </label>
-          <label class="menu-option" for="dessert-2">
+          <label class="menu-option fade-in delay-1000" for="dessert-2">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Macaron au chocolat d'exception</h3>
               <p class="menu-option__subtitle">et sa glace à la vanille de Madagascar</p>
@@ -181,7 +181,7 @@
               <i class="icon-check"></i>
             </div>
           </label>
-          <label class="menu-option" for="dessert-3">
+          <label class="menu-option fade-in delay-1100" for="dessert-3">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Mousse au chocolat</h3>
               <p class="menu-option__subtitle">au piment d'Espelette et à la truffe noire</p>
