--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
               </label>
             </div>
+          </div>
         </article>
         <article class="card">
           <figure class="card-cover">
@@ -101,6 +102,7 @@
                 <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
               </label>
             </div>
+          </div>
         </article>
         <article class="card">
           <figure class="card-cover">
@@ -126,6 +128,7 @@
                 <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
               </label>
             </div>
+          </div>
         </article>
         <article class="card">
           <figure class="card-cover">
@@ -151,6 +154,7 @@
                 <i class="like__icon icon-heart-plain" aria-hidden="true"></i>
               </label>
             </div>
+          </div>
         </article>
       </div>
     </section>
