fix location search

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <main class="content">
 
     <form class="location-search">
-      <i class="icon-location" aria-hidden="true"></i>
-      <input type="search" class="search-bar__input" value="Paris, Belleville">
+      <i class="location-search__icon icon-location" aria-hidden="true"></i>
+      <input type="search" class="location-search__input" value="Paris, Belleville">
     </form>
 
     <header class="content-header">
