--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -20,12 +20,12 @@
 
   <main class="restaurant">
     <figure class="restaurant-cover">
-      <img sizes="(max-width: 1920px) 100vw, 1920px" srcset="
-../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_360.jpg 360w,
-../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_800.jpg 800w,
-../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1200.jpg 1200w,
-../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg 1920w"
-        src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg" alt="">
+      <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg" srcset="
+                ../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_360.jpg 360w,
+                ../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_800.jpg 800w,
+                ../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1200.jpg 1200w,
+                ../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash_devxoa_c_scale,w_1920.jpg 1920w"
+        sizes="(max-width: 600px) 360px, (max-width: 1200px) 800px, 1920px" alt="">
     </figure>
 
     <header class="restaurant-header">
