fix w3c markup issues

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -45,7 +45,7 @@
         <fieldset class="fade-in">
           <legend>Entrées</legend>
 
-          <label class="menu-option fade-in delay-100" for="entree-1">
+          <div class="menu-option fade-in delay-100">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Fricassée d'escargots</h3>
               <p class="menu-option__subtitle">au piment d'Espelette</p>
@@ -56,13 +56,15 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="entree-1">Sélectionnez cette entrée</label>
             <input type="radio" name="entree" id="entree-1">
+
             <div class="menu-option__checkbox">
               <i class="icon-check" aria-hidden="true"></i>
             </div>
-          </label>
+          </div>
 
-          <label class="menu-option fade-in delay-200" for="entree-2">
+          <div class="menu-option fade-in delay-200">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Foie gras de canard mi-cuit</h3>
               <p class="menu-option__subtitle">et ses copeaux de truffe noire</p>
@@ -73,13 +75,15 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="entree-2">Sélectionnez cette entrée</label>
             <input type="radio" name="entree" id="entree-2">
+
             <div class="menu-option__checkbox">
               <i class="icon-check"></i>
             </div>
-          </label>
+          </div>
 
-          <label class="menu-option fade-in delay-300" for="entree-3">
+          <div class="menu-option fade-in delay-300">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Œuf au plat</h3>
               <p class="menu-option__subtitle">assaisonné à la truffe sur lit de caviar</p>
@@ -90,15 +94,17 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="entree-3">Sélectionnez cette entrée</label>
             <input type="radio" name="entree" id="entree-3">
+
             <div class="menu-option__checkbox">
               <i class="icon-check"></i>
             </div>
-          </label>
+          </div>
         </fieldset>
         <fieldset class="fade-in delay-400">
           <legend>Plats</legend>
-          <label class="menu-option fade-in delay-500" for="plat-1">
+          <div class="menu-option fade-in delay-500">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Filet de bœuf aux herbes</h3>
               <p class="menu-option__subtitle">accompagné de sa ribambelle de légumes</p>
@@ -109,12 +115,14 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="plat-1">Sélectionnez ce plat</label>
             <input type="radio" name="plat" id="plat-1">
+
             <div class="menu-option__checkbox">
               <i class="icon-check" aria-hidden="true"></i>
             </div>
-          </label>
-          <label class="menu-option fade-in delay-600" for="plat-2">
+          </div>
+          <div class="menu-option fade-in delay-600">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Parmentier de queue de bœuf</h3>
               <p class="menu-option__subtitle">à la truffe noire sur sa purée de panais</p>
@@ -125,12 +133,14 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="plat-2">Sélectionnez ce plat</label>
             <input type="radio" name="plat" id="plat-2">
+
             <div class="menu-option__checkbox">
               <i class="icon-check"></i>
             </div>
-          </label>
-          <label class="menu-option fade-in delay-700" for="plat-3">
+          </div>
+          <div class="menu-option fade-in delay-700">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Filet de turbot</h3>
               <p class="menu-option__subtitle">au agrumes</p>
@@ -141,15 +151,17 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="plat-3">Sélectionnez ce plat</label>
             <input type="radio" name="plat" id="plat-3">
+
             <div class="menu-option__checkbox">
               <i class="icon-check"></i>
             </div>
-          </label>
+          </div>
         </fieldset>
         <fieldset class="fade-in delay-800">
           <legend>Desserts</legend>
-          <label class="menu-option fade-in delay-900" for="dessert-1">
+          <div class="menu-option fade-in delay-900">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Paris-Brest</h3>
               <p class="menu-option__subtitle">revisité</p>
@@ -160,12 +172,14 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="dessert-1">Sélectionnez ce dessert</label>
             <input type="radio" name="dessert" id="dessert-1">
+
             <div class="menu-option__checkbox">
               <i class="icon-check" aria-hidden="true"></i>
             </div>
-          </label>
-          <label class="menu-option fade-in delay-1000" for="dessert-2">
+          </div>
+          <div class="menu-option fade-in delay-1000">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Macaron au chocolat d'exception</h3>
               <p class="menu-option__subtitle">et sa glace à la vanille de Madagascar</p>
@@ -176,12 +190,14 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="dessert-2">Sélectionnez ce dessert</label>
             <input type="radio" name="dessert" id="dessert-2">
+
             <div class="menu-option__checkbox">
               <i class="icon-check"></i>
             </div>
-          </label>
-          <label class="menu-option fade-in delay-1100" for="dessert-3">
+          </div>
+          <div class="menu-option fade-in delay-1100">
             <div class="menu-option__description">
               <h3 class="menu-option__title">Mousse au chocolat</h3>
               <p class="menu-option__subtitle">au piment d'Espelette et à la truffe noire</p>
@@ -192,11 +208,13 @@
               <span class="menu-option__price--currency">€</span>
             </div>
 
+            <label for="dessert-3">Sélectionnez ce dessert</label>
             <input type="radio" name="dessert" id="dessert-3">
+
             <div class="menu-option__checkbox">
               <i class="icon-check"></i>
             </div>
-          </label>
+          </div>
         </fieldset>
         <button class="button" type="submit">Commander</button>
       </form>
