add footer contact address

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <a class="nav__link" href="#">Mentions légales</a>
         </li>
         <li class="nav__item">
-          <a class="nav__link" href="#">Contact</a>
+          <a class="nav__link" href="mailto:hello@ohmyfood.com">Contact</a>
         </li>
       </ul>
     </nav>
