--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -256,7 +256,7 @@
           <a class="nav__link" href="#">Mentions légales</a>
         </li>
         <li class="nav__item">
-          <a class="nav__link" href="#">Contact</a>
+          <a class="nav__link" href="mailto:hello@ohmyfood.com">Contact</a>
         </li>
       </ul>
     </nav>
